// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderIcon should render the header when there is no sort 1`] = `
<div
  className="theme-tc-header-icon tc-header-icon"
>
  <Icon
    name="talend-test"
    title="test"
  />
</div>
`;

exports[`HeaderIcon should render unchecked checkbox 1`] = `
<div
  className="theme-tc-header-icon tc-header-icon"
>
  <Icon
    name="talend-test"
    title="test"
  />
  <SortIndicator
    sortDirection="desc"
  />
</div>
`;
